tests/NormalTests/paczka1/small_fuzzy/21846170.err
Error in line 2: bvNqGGyrbs S566 42,2
Error in line 4: S566 S566 50,8
